--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
 	<meta name="description" content="Free web tutorials">
 	<meta name="keywords" content="HTML,CSS,XML,JAVASCRIPT">
 	<meta name="author" content="abhishek">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="viewport" content="width=device-width" intial-scale= "1" user-scalable="0">
 	<link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Title</title>
