--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
 								<span>contact us</span>	
 							</a>
 						</li>
-						<div class="zo"></div>
-						<div class="marker2 zo"></div>
+						<span class="zo"></span>
+						<span class="marker2 zo"></span>
 					</ul>
 			  </nav>
 		</main>
