--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt=" A fashion model wearing a vibrant red dress with a flowing silhouette. The model has a confident posture, with one hand on her hip and the other arm relaxed by her side. She has long, flowing hair and is walking gracefully on a runway, exuding confidence and style.">
-			     	<div class="cont-1 animation-element in-view">
+			     	<img src="./images/model-min.png" class="mod" alt="a model ">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
 			     </div>
@@ -52,7 +51,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/naipolish-min.png" alt="A close-up view of a pink nail polish bottle with a shiny metallic cap.">
+								<img src="./images/naipolish-min.png" alt="naipolish">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -64,7 +63,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="A close-up view of a pink nail polish bottle with a shiny metallic cap.">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
 									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
@@ -76,7 +75,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="A close-up view of a pink nail polish bottle with a shiny metallic cap.">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
 									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
@@ -88,7 +87,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="A close-up view of a pink nail polish bottle with a shiny metallic cap.">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
 									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
@@ -100,7 +99,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="A close-up view of a pink nail polish bottle with a shiny metallic cap.">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
 									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
@@ -118,7 +117,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/air-blower-min.png" alt="An electric air blower with a black and orange color scheme. The blower features a handheld design with a comfortable grip and a nozzle at the front for directing the airflow. It has a power switch and control buttons on the handle, allowing the user to adjust the speed and intensity of the blowing">
+								<img src="./images/air-blower-min.png" alt="air blower">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -130,7 +129,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="An electric air blower with a black and orange color scheme. The blower features a handheld design with a comfortable grip and a nozzle at the front for directing the airflow. It has a power switch and control buttons on the handle, allowing the user to adjust the speed and intensity of the blowing">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
@@ -142,7 +141,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="An electric air blower with a black and orange color scheme. The blower features a handheld design with a comfortable grip and a nozzle at the front for directing the airflow. It has a power switch and control buttons on the handle, allowing the user to adjust the speed and intensity of the blowing">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
@@ -154,7 +153,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="An electric air blower with a black and orange color scheme. The blower features a handheld design with a comfortable grip and a nozzle at the front for directing the airflow. It has a power switch and control buttons on the handle, allowing the user to adjust the speed and intensity of the blowing">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
@@ -166,7 +165,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="An electric air blower with a black and orange color scheme. The blower features a handheld design with a comfortable grip and a nozzle at the front for directing the airflow. It has a power switch and control buttons on the handle, allowing the user to adjust the speed and intensity of the blowing">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
@@ -178,7 +177,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="An electric air blower with a black and orange color scheme. The blower features a handheld design with a comfortable grip and a nozzle at the front for directing the airflow. It has a power switch and control buttons on the handle, allowing the user to adjust the speed and intensity of the blowing">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
@@ -195,7 +194,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/bag-min.png" alt="Yellow leather handbag with a rectangular shape, flap closure, and gold-tone twist lock. It has a handle and detachable shoulder strap, offering versatility. Spacious interior for personal belongings, adding a bold and trendy touch to any outfit.">
+								<img src="./images/bag-min.png" alt="yellow leather handbag">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -207,7 +206,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="Yellow leather handbag with a rectangular shape, flap closure, and gold-tone twist lock. It has a handle and detachable shoulder strap, offering versatility. Spacious interior for personal belongings, adding a bold and trendy touch to any outfit.">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -219,7 +218,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="Yellow leather handbag with a rectangular shape, flap closure, and gold-tone twist lock. It has a handle and detachable shoulder strap, offering versatility. Spacious interior for personal belongings, adding a bold and trendy touch to any outfit.">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -231,7 +230,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="Yellow leather handbag with a rectangular shape, flap closure, and gold-tone twist lock. It has a handle and detachable shoulder strap, offering versatility. Spacious interior for personal belongings, adding a bold and trendy touch to any outfit.">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -243,7 +242,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="Yellow leather handbag with a rectangular shape, flap closure, and gold-tone twist lock. It has a handle and detachable shoulder strap, offering versatility. Spacious interior for personal belongings, adding a bold and trendy touch to any outfit.">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -255,7 +254,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="Yellow leather handbag with a rectangular shape, flap closure, and gold-tone twist lock. It has a handle and detachable shoulder strap, offering versatility. Spacious interior for personal belongings, adding a bold and trendy touch to any outfit.">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -272,7 +271,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/hat-min.png" alt="A stylish straw hat with a wide brim and a black ribbon tied around it. The hat has a classic design and is perfect for shielding the face from the sun while adding a touch of elegance to any outfit.">
+								<img src="./images/hat-min.png" alt="a stylish strawhat">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -284,7 +283,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="A stylish straw hat with a wide brim and a black ribbon tied around it. The hat has a classic design and is perfect for shielding the face from the sun while adding a touch of elegance to any outfit.">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
@@ -296,7 +295,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="A stylish straw hat with a wide brim and a black ribbon tied around it. The hat has a classic design and is perfect for shielding the face from the sun while adding a touch of elegance to any outfit.">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
@@ -308,7 +307,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="A stylish straw hat with a wide brim and a black ribbon tied around it. The hat has a classic design and is perfect for shielding the face from the sun while adding a touch of elegance to any outfit.">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
@@ -320,7 +319,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="A stylish straw hat with a wide brim and a black ribbon tied around it. The hat has a classic design and is perfect for shielding the face from the sun while adding a touch of elegance to any outfit.">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
@@ -332,7 +331,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="A stylish straw hat with a wide brim and a black ribbon tied around it. The hat has a classic design and is perfect for shielding the face from the sun while adding a touch of elegance to any outfit.">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
 									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
@@ -349,7 +348,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/sandals-min.png" alt="A pair of stylish sandals in a neutral tone, featuring straps and an open-toe design. The high-heeled sandals with a slight wedge heel and are adorned with small decorative details.">
+								<img src="./images/sandals-min.png" alt="a pair of sandals">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -361,7 +360,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="A pair of stylish sandals in a neutral tone, featuring straps and an open-toe design. The high-heeled sandals with a slight wedge heel and are adorned with small decorative details.">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -373,7 +372,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="A pair of stylish sandals in a neutral tone, featuring straps and an open-toe design. The high-heeled sandals with a slight wedge heel and are adorned with small decorative details.">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -385,7 +384,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="A pair of stylish sandals in a neutral tone, featuring straps and an open-toe design. The high-heeled sandals with a slight wedge heel and are adorned with small decorative details.">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -397,7 +396,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="A pair of stylish sandals in a neutral tone, featuring straps and an open-toe design. The high-heeled sandals with a slight wedge heel and are adorned with small decorative details.">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -409,7 +408,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="A pair of stylish sandals in a neutral tone, featuring straps and an open-toe design. The high-heeled sandals with a slight wedge heel and are adorned with small decorative details.">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
