--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt="a model ">
+			     	<img src="./images/model-min.png" class="mod" alt="model">
+			     	<div class="cont-1 animation-element in-view">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
 			     </div>
