--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="description" content="Free web tutorials">
 	<meta name="keywords" content="HTML,CSS,XML,JAVASCRIPT">
 	<meta name="author" content="abhishek">
-    <meta name="viewport" content="width=device-width" intial-scale= "1" user-scalable="0">
+        <meta name="viewport" content="width=device-width" intial-scale= "1" user-scalable="0">
+	<meta http-equiv="Cache-Control" content="public, max-age=604800">
 	<link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Title</title>
