--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta name="description" content="Free web tutorials">
 	<meta name="keywords" content="HTML,CSS,XML,JAVASCRIPT">
 	<meta name="author" content="abhishek">
-        <meta name="viewport" content="width=device-width" intial-scale= "1" user-scalable="0">
-	<meta http-equiv="Cache-Control" content="public, max-age=604800">
+    <meta name="viewport" content="width=device-width" intial-scale= "1" user-scalable="0">
 	<link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Title</title>
@@ -66,7 +65,7 @@
 						    <section class="vertical-center-5 ">
 								<div class="chart">
 									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-									<div class="hold-2">
+					 loading="lazy"				<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -78,7 +77,7 @@
 								</div>
 							    <div class="chart">
 									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-									<div class="hold-2">
+					 loading="lazy"				<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -90,7 +89,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-									<div class="hold-2">
+					 loading="lazy"				<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -102,7 +101,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-									<div class="hold-2">
+					 loading="lazy"				<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -132,7 +131,7 @@
 						    <section class="vertical-center-5 ">
 								<div class="chart">
 									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-									<div class="hold-2">
+			 loading="lazy"						<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -144,7 +143,7 @@
 								</div>
 							    <div class="chart">
 									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-									<div class="hold-2">
+			 loading="lazy"						<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -156,7 +155,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-									<div class="hold-2">
+			 loading="lazy"						<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -168,7 +167,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-									<div class="hold-2">
+			 loading="lazy"						<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -180,7 +179,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-									<div class="hold-2">
+			 loading="lazy"						<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -208,7 +207,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -220,7 +219,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -232,7 +231,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -244,7 +243,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -256,7 +255,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag">
+									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>bags</h5>	
@@ -286,7 +285,7 @@
 						    <section class="vertical-center-5 ">
 								<div class="chart">
 									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-									<div class="hold-2">
+		 loading="lazy"							<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -298,7 +297,7 @@
 								</div>
 							    <div class="chart">
 									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-									<div class="hold-2">
+		 loading="lazy"							<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -310,7 +309,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-									<div class="hold-2">
+		 loading="lazy"							<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -322,7 +321,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-									<div class="hold-2">
+		 loading="lazy"							<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -334,7 +333,7 @@
 								</div>
 								<div class="chart">
 									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-									<div class="hold-2">
+		 loading="lazy"							<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -362,7 +361,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -374,7 +373,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -386,7 +385,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -398,7 +397,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -410,7 +409,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals">
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -467,6 +466,7 @@
 						<span class="marker2 zo"></span>
 					</ul>
 			  </nav>
+
 		</main>
 </body>
 <script src="js/jquery.min.js"></script>
@@ -474,12 +474,21 @@
 <script src="js/parallax.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/slick.js"></script>
-<script>
-    const div = document.querySelector('#slider');
+  <script>
+// Get a reference to the element
+const element = document.getElementById('slider');
 
-    div.addEventListener('scroll', (event) => {
+// Define the event handler function
+function eventHandler(event) {
+  // Your event handling logic here
+  console.log('Scroll event occurred!');
+}
 
-    }, { passive: true });
-</script>
+// Add a passive event listener to the 'scroll' event using vanilla JavaScript
+element.addEventListener('scroll', eventHandler, { passive: true });
+
+  </script>
 <script src="js/common.js"></script>
+
+
 </html>
