--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt="model">
+			     	<img src="./images/model-min.png" class="mod" alt="model" loading="lazy">
 			     	<div class="cont-1 animation-element in-view">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
@@ -52,7 +52,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+								<img src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -64,10 +64,10 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
-										<h5>naipolish</h5>	
+										<h5>nailpolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
 										</div>
 										<div class="down">
@@ -76,10 +76,10 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
-										<h5>naipolish</h5>	
+										<h5>nailpolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
 										</div>
 										<div class="down">
@@ -88,10 +88,10 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
-										<h5>naipolish</h5>	
+										<h5>nailpolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
 										</div>
 										<div class="down">
@@ -100,10 +100,10 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
-										<h5>naipolish</h5>	
+										<h5>nailpolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
 										</div>
 										<div class="down">
