--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 		    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
 		        <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
 		    </svg>
-		</div>
-		           
+		           </div> 
 			    </div>
 			    <div class="translate curve-b" data-speed="-0.1">
 				    <div class="custom-shape-divider-bottom-1640010232">
@@ -38,7 +37,7 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt="model">
+			     	<img src="./images/model-min.png" class="mod" alt="model" loading="lazy">
 			     	<div class="cont-1 animation-element in-view">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
@@ -55,8 +54,8 @@
 								<img src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
 							</div>
 							<div class="lower">
-								<a href="#" class="butt" onclick="return false">
-									<button class="pause" style="display:inline-block !important;">explore</button>
+								<a href="#" class="butt " onclick="return false">
+									<button class="pause yum" style="display:inline-block !important;">explore</button>
 								</a>
 							</div>
 						</div>
@@ -70,7 +69,7 @@
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
-									<button class="pause"  style="display:inline-block !important;">explore</button>
+									<button class="pause yum"  style="display:inline-block !important;">explore</button>
 								</a>
 							</div>
 						</div>
@@ -83,7 +82,7 @@
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
-									<button class="pause" style="display:inline-block !important;">explore</button>
+									<button class="pause yum" style="display:inline-block !important;">explore</button>
 								</a>
 							</div>
 						</div>
@@ -96,7 +95,7 @@
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
-									<button class="pause" style="display:inline-block !important;">explore</button>
+									<button class="pause yum" style="display:inline-block !important;">explore</button>
 								</a>
 							</div>
 						</div>
@@ -109,15 +108,15 @@
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
-									<button class="pause"  style="display:inline-block !important;">explore</button>
+									<button class="pause yum"  style="display:inline-block !important;">explore</button>
 								</a>
 							</div>
 						</div>
 
 						</div>
+						</section>
+						<div class="my">fuck</div>
 					</div>
-				</section>
-			</div>
 			<nav class="nav-bar">
 					<ul class="list-1 ">
 						<li class="limb active">
@@ -180,6 +179,7 @@ function eventHandler(event) {
 element.addEventListener('scroll', eventHandler, { passive: true });
 
   </script>
+
 <script src="js/common.js"></script>
 
 
